--- a/src/mkdocs_ansible/main.html
+++ b/src/mkdocs_ansible/main.html
@@ -1,3 +1,3 @@
 {% extends "base.html" %} {% block styles %} {{ super() }}
-<link rel="stylesheet" href="assets/stylesheets/ansible.css" />
+<link rel="stylesheet" href="{{ 'assets/stylesheets/ansible.css' | url }}" />
 {% endblock %}
